# ChangeLog for dev-ruby/activeresource
# Copyright 1999-2010 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/dev-ruby/activeresource/ChangeLog,v 1.57 2010/01/04 11:03:08 fauli Exp $

  04 Jan 2010; Christian Faulhammer <fauli@gentoo.org>
  activeresource-2.3.5.ebuild:
  Transfer Prefix keywords

  20 Dec 2009; Alex Legler <a3li@gentoo.org> -activeresource-2.3.4.ebuild:
  Removing vulnerable version

  19 Dec 2009; Jeroen Roovers <jer@gentoo.org> activeresource-2.3.5.ebuild:
  Stable for PPC (bug #294797).

  30 Nov 2009; Raúl Porcel <armin76@gentoo.org>
  activeresource-2.3.5.ebuild:
  ia64/sparc stable wrt #294797

  30 Nov 2009; Brent Baude <ranger@gentoo.org> activeresource-2.3.5.ebuild:
  Marking activeresource-2.3.5 ppc64 stable for bug 294797

  30 Nov 2009; Markus Meier <maekke@gentoo.org> activeresource-2.3.5.ebuild:
  amd64/x86 stable, bug #294797

*activeresource-2.3.5 (28 Nov 2009)

  28 Nov 2009; Alex Legler <a3li@gentoo.org> +activeresource-2.3.5.ebuild:
  Version bump, security bug 294797

  22 Oct 2009; Alex Legler <a3li@gentoo.org> -activeresource-2.0.5.ebuild,
  -activeresource-2.1.2.ebuild:
  removing old

  18 Oct 2009; Alex Legler <a3li@gentoo.org> -activeresource-2.2.2.ebuild:
  removing vulnerable ebuild, bug 283396

  18 Oct 2009; nixnut <nixnut@gentoo.org> activeresource-2.2.3.ebuild:
  ppc stable #283396

  18 Oct 2009; Brent Baude <ranger@gentoo.org> activeresource-2.2.3.ebuild:
  Marking activeresource-2.2.3 ppc64 stable for bug 283396

  08 Oct 2009; Raúl Porcel <armin76@gentoo.org>
  activeresource-2.2.3.ebuild:
  ia64/sparc stable wrt #283396

  07 Oct 2009; Markus Meier <maekke@gentoo.org> activeresource-2.2.3.ebuild:
  amd64 stable, bug #283396

  04 Oct 2009; Christian Faulhammer <fauli@gentoo.org>
  activeresource-2.2.3.ebuild:
  stable x86, bug 283396

*activeresource-2.2.3 (03 Oct 2009)

  03 Oct 2009; Alex Legler <a3li@gentoo.org> +activeresource-2.2.3.ebuild:
  Version bump
