@@ -1,6 +1,7 @@
 DIST activeresource-2.3.4.gem 51712 RMD160 730ce680f78450b1f175faf5b2184ebae420d019 SHA1 214db73f7bfc62cfe5234c3cbf30e4fec6ef16d5 SHA256 1afe2a67a21458e09ec3e48786b6c1ca907e85976c0069da6bf315044d6c7161
 DIST activeresource-2.3.5.gem 64000 RMD160 cd09fdf2b0d79547af49aa91f21dacebe1cd800f SHA1 2b4bb421e0857f73d8e9aa2bdd164d6c11bebc00 SHA256 789c5179efe8618a9f127948be2bc6a293b6ad01186ad20e83e882ebff34f33b
 EBUILD activeresource-2.3.4.ebuild 602 RMD160 b97dbbac3ae6395cb02093c4d5820d6000a17889 SHA1 1263c9894d4502ebc05ec8797cd3db91a1530b6b SHA256 83b2b08911e0540066bb34f6ee328f8eb571c45875299bd1563ac85ba5638064
+EBUILD activeresource-2.3.5-r1.ebuild 819 RMD160 7205d45ac75a371426577cac366e7a87de17726f SHA1 67225a87e22251488b92022371b9710645c7f3c7 SHA256 af90bb2e177116009980eecbc15d5baab632f42f2f322b494d6d726af7a0f8a3
 EBUILD activeresource-2.3.5.ebuild 601 RMD160 a228fbb4d031b028576ff9d245dca8ce0b360179 SHA1 cb021582c95cc9087ee8681d7acd3ee158e1dea1 SHA256 470c6d4f760b8b2cd3047a77e800d6d702056d11c29257d08bcdc50d1e1ec2cc
-MISC ChangeLog 7770 RMD160 18447e3ff322354a97f0db110e35018f2ad45002 SHA1 fd48f7e4b7d9fbb35d7ae4ff2993f2946b1bc735 SHA256 9355c3008f4486ba0790a9102a904e5318cd0d8b358934dcf69260e5daf1d9c7
+MISC ChangeLog 8046 RMD160 88926e65b85e5bb1bcbeddd2371cb11dc1835070 SHA1 13eb43b36b58f87322ad03267ab77ab62976ebdd SHA256 cda73fe6ab15d0a51ff83e801c53b3a78e7a9513bfce04d0e4fa03fb9675d5d0
 MISC metadata.xml 157 RMD160 5d9e2c7ecba96ffebd936d38acedf859cdea84e1 SHA1 8ce15dcc608eeb5616aeec610dc695cbe6f93e02 SHA256 11fba03a217e2d996f5cd8895493a5692ece8ddac2c1a2dfc71d0e830555121c
