@@ -1,0 +1,28 @@
+# Copyright 1999-2010 Gentoo Foundation
+# Distributed under the terms of the GNU General Public License v2
+# $Header: /var/cvsroot/gentoo-x86/dev-ruby/activeresource/activeresource-2.3.5-r1.ebuild,v 1.1 2010/01/13 13:24:02 flameeyes Exp $
+
+EAPI=2
+
+USE_RUBY="ruby18"
+
+RUBY_FAKEGEM_DOCDIR="doc"
+RUBY_FAKEGEM_EXTRADOC="CHANGELOG README"
+
+inherit ruby-fakegem
+
+DESCRIPTION="Think Active Record for web resources.."
+HOMEPAGE="http://rubyforge.org/projects/activeresource/"
+
+LICENSE="MIT"
+SLOT="2.3"
+KEYWORDS="~x86-freebsd ~amd64-linux ~x86-linux ~ppc-macos ~x86-macos ~x64-solaris ~x86-solaris"
+IUSE=""
+
+ruby_add_rdepend "~dev-ruby/activesupport-${PV}"
+ruby_add_bdepend test ">=dev-ruby/mocha-0.9.5 virtual/ruby-test-unit"
+
+all_ruby_prepare() {
+	# Custom template not found in package
+	sed -i -e '/horo/d' Rakefile || die
+}
