@@ -1,6 +1,16 @@
 # ChangeLog for dev-ruby/activeresource
 # Copyright 1999-2010 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/dev-ruby/activeresource/ChangeLog,v 1.57 2010/01/04 11:03:08 fauli Exp $
+# $Header: /var/cvsroot/gentoo-x86/dev-ruby/activeresource/ChangeLog,v 1.58 2010/01/13 13:24:02 flameeyes Exp $
+
+  13 Jan 2010; Diego E. Pettenò <flameeyes@gentoo.org>
+  +activeresource-2.3.5-r1.ebuild:
+  Bump to ruby-fakegem.
+
+*activeresource-2.3.5-r1 (13 Jan 2010)
+
+  13 Jan 2010; Diego E. Pettenò <flameeyes@gentoo.org>
+  +activeresource-2.3.5-r1.ebuild:
+  Bump to ruby-fakegem.
 
   04 Jan 2010; Christian Faulhammer <fauli@gentoo.org>
   activeresource-2.3.5.ebuild:
